<resources>
    <!-- Global -->
    <string name="app_name">Wallpaper Changer</string>
    <string name="key_wallpaper_dir">wallpaperDir</string>
    <string name="worker_tag_auto_wallpaper_changer">autoWallpaperChanger</string>
    <string name="view_image_string">View using</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>

    <!-- Bottom Navigation -->
    <string name="item_home_string">HOME</string>
    <string name="item_info_string">INFO</string>
    <string name="item_settings_string">SETTINGS</string>

    <!-- Home -->
    <string name="button_choose_dir_string">Choose directory</string>
    <string name="button_random_wallpaper_string">Set random wallpaper</string>
    <string name="textview_current_wallpaper_string">Last set wallpaper name:\n%s</string>
    <string name="key_auto_change_enabled">autoEnabled</string>

    <!-- Info -->
    <string name="preference_category_info_string">Info</string>
    <string name="key_current_picture">currentPicture</string>
    <string name="preference_current_picture_string">Current picture: %s</string>
    <string name="preference_current_picture_summary_string">Click to display</string>
    <string name="key_amount_pictures">amountPictures</string>
    <string name="preference_amount_picture_string">Number of Pictures: %d</string>
    <string name="preference_amount_picture_summary_string">Click to display all</string>
    <string name="preference_category_statistic_string">Statistic</string>
    <string name="key_amount_changes">amountChanges</string>
    <string name="key_amount_changes_automatic">amountChangesAutomatic</string>
    <string name="key_amount_changes_manual">amountChangesManual</string>
    <string name="preference_amount_changes_string">Number of changes: %d</string>
    <string name="preference_amount_changes_summary_string">Automatic: %d\nManual: %d\nClick to reset</string>
    <string name="question_title_reset_amount_changes">Reset statistic</string>
    <string name="question_message_reset_amount_changes">Do you really want to reset all the statistics?</string>
    <string name="confirmation_reset_amount_changes">Statistics were reset</string>

    <!-- Settings -->
    <string name="preference_category_general_string">General</string>
    <string name="preference_wallpaper_dir_string">Wallpaper directory</string>
    <string name="preference_wallpaper_dir_summary_string">%s\nClick to change</string>
    <string name="preference_category_automatic_mode_string">Automatic Mode</string>
    <string name="key_automatic_interval">automaticInterval</string>
    <string name="preference_interval_start_time_string">Change interval</string>
    <string name="preference_interval_start_time_summary_string">Changing every %dh %dm\nStarting at %02d:%02d o\'clock\nClick to change</string>
    <string name="dialog_heading_start_time">Start time:</string>
    <string name="dialog_heading_time_interval">Interval:</string>
    <string name="dialog_hour_string">hrs</string>
    <string name="dialog_minute_string">mins</string>

    <!-- Image Activity -->
    <string name="button_select_wallpaper_string">Select Wallpaper</string>

</resources>